test_files/s_cproc/macro_define/test_011/e_expect.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_011/i.input:1:44: error: '##' cannot appear at either end of a macro expansion
 #define macro/* a comment */"include.input"##
                                            ^
